[package]
name = "pretty-php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
